Revert "Feat/user upload submit bill"
