# docs/openapi.yml
@@ -45,77 +45,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /api/bill/paid/image:
-    get:
-      summary: 관리비 완료 이미지 조회
-      description: (유저, 관리자 조회 가능) 저장된 관리비 완료 이미지를 조회하기 위한 임시 다운로드 URL을 발급합니다. 발급된 URL은 5분간 유효합니다.
-      tags:
-        - Bills
-      parameters:
-        - name: roomId
-          in: query
-          description: 호실 번호
-          required: true
-          schema:
-            type: string
-          example: "101"
-        - name: type
-          in: query
-          description: 관리비 유형
-          required: true
-          schema:
-            type: string
-            enum: [water, electricity, gas]
-          example: "water"
-        - name: year
-          in: query
-          description: 연도
-          required: true
-          schema:
-            type: string
-          example: "2025"
-        - name: month
-          in: query
-          description: 월
-          required: true
-          schema:
-            type: string
-          example: "9"
-      responses:
-        "200":
-          description: 이미지 정보가 성공적으로 반환되었습니다.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/BillImageResponse"
-        "400":
-          description: 잘못된 요청 (필수 쿼리 파라미터 누락 또는 유효하지 않은 값)
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-              examples:
-                missingParam:
-                  value:
-                    error: "roomId is required."
-                invalidType:
-                  value:
-                    error: "Invalid bill type. Must be one of: water, electricity, gas"
-        "404":
-          description: 이미지를 찾을 수 없음
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-              example:
-                error: "No image found for the specified criteria."
-        "500":
-          description: 서버 내부 오류
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-
   /api/students:
     get:
       summary: 학생 목록 조회
@@ -1172,7 +1101,7 @@ paths:
   /api/bill/presign:
     post:
       summary: 관리비 고지서 업로드 URL 발급
-      description: S3에 관리비 고지서 이미지를 업로드하기 위한 임시 presigned URL을 발급합니다. 발급된 URL은 5분간 유효합니다. 유저는 관리비 납부 완료 사진을 업로드하는 URL을 얻고 관리자는 관리비 사진을 업로드 하는 URL을 얻습니다.
+      description: S3에 관리비 고지서 이미지를 업로드하기 위한 임시 presigned URL을 발급합니다. 발급된 URL은 5분간 유효합니다.
       tags:
         - Bills
       requestBody:
@@ -1221,7 +1150,7 @@ paths:
   /api/bill/image:
     get:
       summary: 관리비 고지서 이미지 조회
-      description: (관리자, 유저 가능) 저장된 관리비 고지서 이미지를 조회하기 위한 임시 다운로드 URL을 발급합니다. 발급된 URL은 5분간 유효합니다.
+      description: 저장된 관리비 고지서 이미지를 조회하기 위한 임시 다운로드 URL을 발급합니다. 발급된 URL은 5분간 유효합니다.
       tags:
         - Bills
       parameters:
